New Form Query added

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -11,5 +11,6 @@
     <% for(product of products){ %>
         <li><a href="product/<%= product.id %> "><%= product.name %></a></li>
     <% } %>  
+    <a href="/product/new">Add New</a>
 </body>
 </html>
