--- a/views/show.ejs
+++ b/views/show.ejs
@@ -10,6 +10,7 @@
     <h1><%= product.name %></h1>
     <p>Price: <%= product.price %> </p>
     <p>Category: <%= product.category %> </p>
+    <a href="/product/<%= product._id %>/edit">Edit</a>
     <a href="/">Back to home</a>
 </body>
 </html>
