--- a/views/edit.ejs
+++ b/views/edit.ejs
@@ -7,13 +7,13 @@
     <title>Add New Product</title>
 </head>
 <body>
-    <form action="/product/new" method="POST">
+    <form action="/product/<%= product._id %>?_method=PUT " method="POST">
         <label for="name">Name</label>
         <input type="text" name="name" id="name" value="<%= product.name %> "/>
         <label for="price">Price</label>
         <input type="number" name="price" id="price" value="<%= product.price %>"/>
         <label for="category">Category</label>
-        <select id="category">
+        <select id="category" name="category">
             <% for(category of categories) {%>
                 <option <%= category === product.category ? 'selected' : '' %>><%= category %></option>
             <% } %>  
